Switch to JDK11 and cleanup warnings. 	new file:   .settings/org.eclipse.jdt.core.prefs 	modified:   src/org/apache/xml/resolver/Catalog.java 	modified:   src/org/apache/xml/resolver/CatalogEntry.java 	modified:   src/org/apache/xml/resolver/CatalogException.java 	modified:   src/org/apache/xml/resolver/CatalogManager.java 	modified:   src/org/apache/xml/resolver/Resolver.java 	modified:   src/org/apache/xml/resolver/apps/resolver.java 	modified:   src/org/apache/xml/resolver/apps/xparse.java 	modified:   src/org/apache/xml/resolver/apps/xread.java 	modified:   src/org/apache/xml/resolver/helpers/BootstrapResolver.java 	modified:   src/org/apache/xml/resolver/readers/DOMCatalogReader.java 	modified:   src/org/apache/xml/resolver/readers/ExtendedXMLCatalogReader.java 	modified:   src/org/apache/xml/resolver/readers/OASISXMLCatalogReader.java 	modified:   src/org/apache/xml/resolver/readers/SAXCatalogParser.java 	modified:   src/org/apache/xml/resolver/readers/SAXCatalogReader.java 	modified:   src/org/apache/xml/resolver/readers/TR9401CatalogReader.java 	modified:   src/org/apache/xml/resolver/readers/TextCatalogReader.java 	modified:   src/org/apache/xml/resolver/readers/XCatalogReader.java 	modified:   src/org/apache/xml/resolver/tools/CatalogResolver.java 	modified:   src/org/apache/xml/resolver/tools/ResolvingParser.java 	modified:   src/org/apache/xml/resolver/tools/ResolvingXMLFilter.java 	modified:   src/org/apache/xml/resolver/tools/ResolvingXMLReader.java